consul/consul-monitored.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  ports:
  - port: 8500
    name: http
  selector:
    app: consul
---
apiVersion: v1
kind: Service
metadata:
  name: consul-metrics
  namespace:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9107"
spec:
  ports:
  - port: 9107
    name: consul-metrics
  selector:
    app: consul
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: consul
  namespace:
  labels:
spec:
  serviceName: consul
  replicas: 3
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      serviceAccountName: consul
      terminationGracePeriodSeconds: 10
      containers:
        - name: node
          image: consul:latest
          volumeMounts:
            - name: data
              mountPath: /consul/data
          args:
          - consul
          - agent
          - -datacenter=kubernetes
          - -log-level=debug
          - -bootstrap-expect=3
          - -retry-join=provider="k8s" namespace="$(POD_NAMESPACE)" label_selector="app=consul"
          - -client=0.0.0.0
          - -bind=0.0.0.0
          - -data-dir=/consul/data
          - -server
          - -domain=cluster.local
          - -ui
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "consul leave"]
        - name: exporter
          image: prom/consul-exporter:latest
          args:
          - --consul.server=localhost:8500
          - --log.level=debug
          ports:
          - containerPort: 9107          
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
