consul/consul-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-ui
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: consul.demo.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: consul
          servicePort: 8500
